--- a/contador de copos de agua/index.html
+++ b/contador de copos de agua/index.html
@@ -8,15 +8,21 @@
 <body>
 <div class="container">
 
-    <h1>QUANTOS COPOS TOMEI HOJE</h1>
+    <h1>QUANTOS COPOS TOMEI HOJE?</h1>
 
     <div class="count">
         <button id="menos">- 200ml</button>
+
+        <div class="copo">
+            <p id="cups">0</p>
+            <p id="cup">0</p>
+        </div>
+       
         <button id="mais">+ 200ml</button>
     </div>
 
     <div class="result">
-        <h1>COPOS: &nbsp;<p id="cups"></p></h1><br>
+        
         <h1> QUANTIDADE: &nbsp;<p id="volu"></p></h1>
     </div>
 
@@ -25,8 +31,7 @@
 
 <div class="txt">
     <h2>A água é essencial para a vida, pois desempenha diversas funções no organismo, como regular a temperatura corporal, transportar nutrientes e oxigênio, eliminar resíduos e proteger órgãos e tecidos.</h2><br>
-    <h2>A recomendação geral é beber de 2 a 3 litros de água por dia, mas essa quantidade pode variar de acordo com a idade, o sexo, o nível de atividade física e as condições climáticas.</h2><br>
-    <h2>Os sinais de desidratação incluem sede, cansaço, micção frequente, constipação e dificuldade de concentração. Para manter-se hidratado, é importante beber água regularmente, mesmo que não sinta sede. Também é importante evitar bebidas alcoólicas e com cafeína.</h2><br>
+    <h2>A recomendação geral é beber de 2 a 3 litros de água por dia, mas essa quantidade pode variar de acordo com a idade, o sexo, o nível de atividade física e as condições climáticas. Você pode calcular com esta formúla (peso veses 35ml dividido por 1000), exemplo 80 x 35 / 1000 = 2,8 litros</h2><br>
     <h2>Aqui estão algumas dicas para beber mais água:</h2><br>
     <ul>
         <li>Mantenha uma garrafa de água à mão.</li>
